# FamilyLedger

./: .editorconfig  .eslintrc.js  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  implementation_task.yml  release_checklist.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/audit/: event_log.rs
apps/desktop/src-tauri/src/commands/: accounts.rs  ai.rs  audit.rs  budgets.rs  imports.rs  ledger_store.rs  mod.rs  pairing.rs  reports.rs  scheduled.rs  sync.rs  transactions.rs  vault.rs
apps/desktop/src-tauri/src/crypto/: mod.rs  sync_key.rs  vault_key.rs
apps/desktop/src-tauri/src/db/: connection.rs
apps/desktop/src-tauri/src/db/migrations/: 001_initial_schema.rs  mod.rs
apps/desktop/src-tauri/src/logging/: mod.rs
apps/desktop/src-tauri/src/sync/: adapter.rs  dropbox.rs  filesystem.rs  mod.rs  webdav.rs
docs/adr/: ADR-0001-monorepo-tauri-foundation.md  ADR-TEMPLATE.md  README.md
docs/architecture/: ai-harness.md  audit-trail.md  custom-report-sample.json  data-model.md  security-model.md  stack-rationale.md  sync-model.md
docs/dev/: contributing.md  dependency-policy.md  (+4 more)
e2e/: package.json  playwright.config.ts  tsconfig.json
(+68 files in other folders)
