[package]
name = "familyledger-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "familyledger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
sodiumoxide = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
